Prepared initial project structure.